<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookOwl</string>
    <string name="action_settings">Settings</string>
    <string name="action_table_of_content">Table of Content</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Books</string>
    <string name="nav_item_import">Import</string>
    <string name="nav_item_settings">Settings</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_import</item>
        <item>@string/nav_item_settings</item>
    </string-array>

    <string name="title_settings">Settings</string>
    <string name="title_import">Import</string>
    <string name="title_home">Books</string>

    <string name="read_preferences">Settings</string>

    <string name="dialog_toc_title">Table of Content</string>

    <string name="dialog_autoscan_title">You dont have books.</string>
    <string name="dialog_autoscan_message">Buscar libros en el dispositivo?</string>

    <string name="empty_bookshelf">Empty Library.</string>


    <string name="folder_name">BOOKS</string>

    <string name="fontsize_preference_title">Font Size</string>
    <string name="fontsize_preference_message">Change Font Size</string>
    <string name="fontsize_preference_key">seek_bar_preference_key</string>
    <string name="fontsize_preference_summary"></string>

    <string name="darkmode_preference_text_on"></string>
    <string name="darkmode_preference_text_off"></string>
    <string name="darkmode_preference_dialog_message">Active DarkMode</string>
    <string name="darkmode_preference_key">darkmode_preference_key</string>
    <string name="darkmode_preference_summary"></string>
    <string name="darkmode_preference_title">Dark Mode</string>

    <string name="brightness_preference_dialog_message">Adjust the Brightness</string>
    <string name="brightness_preference_dialog_title">Brightness</string>
    <string name="brightness_preference_key">brightness_preference_key</string>
    <string name="brightness_preference_summary"></string>
    <string name="brightness_preference_title">Brightness</string>

    <string name="success_adding_book">Adding book : </string>
    <string name="repeat_book">The book is in Library.</string>
    <string name="error_adding_book">Error adding book</string>

    <string name="loading_book">Loading the book.</string>



</resources>
